force-app/main/default/objects/Candidate__c/validationRules/Experience_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Experience_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Total Experience must be greater than 0.</description>
    <errorConditionFormula>OR(
  ISBLANK(Total_Experience__c),
  Total_Experience__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>Total Experience must be greater than 0.</errorMessage>
</ValidationRule>