force-app/main/default/objects/Candidate__c/validationRules/Phone_Number_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Length</fullName>
    <active>true</active>
    <description>Phone number must be exactly 10 digits and numeric only</description>
    <errorConditionFormula>OR(
  ISBLANK(Phone__c),
  NOT(REGEX(Phone__c, &quot;^[0-9]{10}$&quot;))
)</errorConditionFormula>
    <errorMessage>Phone number must be exactly 10 digits and numeric only</errorMessage>
</ValidationRule>