force-app/main/default/objects/Candidate__c/listViews/Blacklisted_Candidates.listView-meta.xml
<ListView>
    <fullName>Blacklisted_Candidates</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Blacklisted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Blacklisted  Candidates</label>
    <sharedTo>
        <role>HR_Managers</role>
    </sharedTo>
</ListView>