force-app/main/default/objects/Candidate__c/listViews/Senior_Candidates.listView-meta.xml
<ListView>
    <fullName>Senior_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Primary_Skill__c</columns>
    <columns>Total_Experience__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Total_Experience__c</field>
        <operation>greaterThan</operation>
        <value>5</value>
    </filters>
    <label>Senior  Candidates</label>
    <sharedTo>
        <role>HR_Executive</role>
    </sharedTo>
</ListView>